--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,9 @@ baseURL = "https://vitess.io"
 title   = "Vitess"
 disableKinds = ["taxonomy", "taxonomyTerms"]
 
+[params]
+subtitle = "A database clustering system for horizontal scaling of MySQL"
+
 [params.home]
 title = "Vitess is a database clustering system for horizontal scaling of MySQL"
 
